--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             </li>
           </ul>
           <a
-            href="index2.html"
+            href="registration.html"
             class="header__pa-button header__pa-button--hover"
           >
             <span class="header__pa-button-anchor">Личный кабинет</span>
@@ -65,12 +65,25 @@
           </h1>
           <p class="first-cart__subtitle">
             Мы ценим время наших клиентов так же высоко как и оказанное нам
-            доверие и поэтому мы предлагаем различные формы работы: 1.
-            Традиционные консультации в формате личных или онлайн встреч в
-            Санкт- Петербурге 2. Полу-очная терапия (сочетание консультаций и
-            работы над уникальными домашними заданиями, предоставляемых в личном
-            кабинете по мере необходимости).
+            доверие и поэтому мы предлагаем различные формы работы:
           </p>
+          <div class="first-cart__wrap-text">
+            <div class="first-cart__inner-text">
+              <b class="first-cart__number">1</b>
+              <p class="first-cart__text">
+                Традиционные консультации в&nbsp;формате личных или онлайн
+                встреч в Санкт- Петербурге
+              </p>
+            </div>
+            <div class="first-cart__inner-text">
+              <b class="first-cart__number">2</b>
+              <p class="first-cart__text">
+                Полу-очная терапия (сочетание консультаций и&nbsp;работы над
+                уникальными домашними заданиями, предоставляемых в&nbsp;личном
+                кабинете по&nbsp;мере необходимости)
+              </p>
+            </div>
+          </div>
         </div>
         <div class="grid-carts__cart grid-carts__cart--hover">
           <div class="grid-carts__wrap-image">
@@ -350,7 +363,7 @@
               class="carts-desc__image carts-desc__image--modif"
             />
           </picture>
-          <div class="carts-desc__inner-text text--modif">
+          <div class="carts-desc__inner-text carts-desc__inner-text--modif">
             <h2 class="carts-desc__text-title">
               Ведение своего дневника терапии
             </h2>
@@ -361,7 +374,7 @@
           </div>
         </div>
         <div class="carts-desc__cart">
-          <div class="carts-desc__inner-text text--modif">
+          <div class="carts-desc__inner-text">
             <h2 class="carts-desc__text-title">Полу-очная терапия</h2>
             <p class="carts-desc__desc">
               Прохождение домашних заданий дистанционно
@@ -389,7 +402,7 @@
               class="carts-desc__image"
             />
           </picture>
-          <div class="carts-desc__inner-text text--modif">
+          <div class="carts-desc__inner-text carts-desc__inner-text--modif">
             <h2 class="carts-desc__text-title">
               Открывать результаты для терапевта
             </h2>
@@ -425,7 +438,9 @@
           Иформация зашифрована в системе, которую не сможет открыть никто без
           Вашего разрешения.
         </p>
-        <a href="#" class="security__button security__button--hover"
+        <a
+          href="https://google.com"
+          class="security__button security__button--hover"
           >Зарегистрироваться</a
         >
       </div>
@@ -443,7 +458,7 @@
         <div class="questions__inner-question">
           <div class="questions__wrap-title-btn questions__wrap-title-btn--js">
             <h3 class="questions__question-title">
-              Что ожидать от консультации?
+              Что ожидать от консультации? wwwwwwwww
             </h3>
             <div class="questions__arrow-btn"></div>
           </div>
@@ -560,29 +575,19 @@
           <p class="call__subtitle">
             Мы на связи в любом удобном для вас сервисе или мессенджере
           </p>
-          <a href="tel:+78142332211" class="call__t-number">8(902) 518-01-85</a>
         </div>
-        <div class="call__inner-links">
-          <p class="call__subtitle">
-            Так же можете написать нам на почту
-            <span class="call__subtitle-part">example@gmail.com</span>
-          </p>
-          <div class="call__wrap-links">
-            <a href="#" class="call__inner-link-icon">
-              <svg width="100px" height="100px">
-                <use xlink:href="images/sprite.svg#skype"></use>
-              </svg>
-            </a>
-            <a href="#" class="call__inner-link-icon">
-              <svg width="100px" height="100px">
-                <use xlink:href="images/sprite.svg#telegram"></use>
-              </svg>
-            </a>
-            <a href="skype:[draggon_3348301]" class="call__inner-link-icon">
-              <svg width="100px" height="100px">
-                <use xlink:href="images/sprite.svg#watsapp"></use>
-              </svg>
-            </a>
+        <div class="call__wrap-number">
+          <div class="call__inner-number">
+            <h4 class="call__name">Анна Навай</h4>
+            <a href="tel:+78142332211" class="call__t-number"
+              >8(902) 518-01-85</a
+            >
+          </div>
+          <div class="call__inner-number">
+            <h4 class="call__name">Анна Навай</h4>
+            <a href="tel:+78142332211" class="call__t-number"
+              >8(902) 518-01-85</a
+            >
           </div>
         </div>
       </div>
