--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             </li>
           </ul>
           <a
-            href="registration.html"
+            href="authorization.html"
             class="header__pa-button header__pa-button--hover"
           >
             <span class="header__pa-button-anchor">Личный кабинет</span>
