--- a/authorization.html
+++ b/authorization.html
@@ -19,7 +19,7 @@
       <div class="regist__wrap">
         <div class="regist__head">
           <h1 class="regist__title">Авторизация</h1>
-          <a href="authorization.html" target="_self" class="regist__auth"
+          <a href="registration.html" target="_self" class="regist__auth"
             >Еще не зарегистрированы?</a
           >
         </div>
@@ -58,6 +58,9 @@
                   value="Войти"
                   class="form__submit form__submit--hover form__submit--js"
                 />
+                <a href="registration.html" class="regist__auth"
+                  >Забыли пароль?</a
+                >
               </div>
             </div>
           </div>
