--- a/registration.html
+++ b/registration.html
@@ -80,10 +80,9 @@
                   </p>
                 </div>
                 <div class="form__button-act form__button-act--js">Далее</div>
-                <a href="personal-area.html">Следующая страница</a>
-                <p class="form__input-warning form__button-act--js">
+                <!-- <p class="form__input-warning form__button-act--js">
                   Такой пользователь уже зарегистрирован
-                </p>
+                </p> -->
               </div>
             </div>
 
